--- a/main.html
+++ b/main.html
@@ -197,77 +197,46 @@
         <div class="container">
             <div class="row g-2 d-flex justify-content-center">
                 <div
-                    class="col-lg-3 col-md-6 col-sm-12 bg-warning d-flex align-items-center justify-content-center rounded-3 shadow-lg">
-                    <i class="fas fa-laptop over-view-icon"></i>
-                    <div class="ps-3">
-                        <h1 style="margin-bottom: 0px;">12k <br> </h1>
-                        <p><span class="over-view-text">online</span> </p>
+                    class="col-lg-3 col-md-6 col-sm-12 ">
+                    <div class="bg-warning d-flex align-items-center justify-content-center rounded-3 shadow-lg">
+                        <i class="fas fa-laptop over-view-icon"></i>
+                        <div class="ps-3">
+                            <h1 style="margin-bottom: 0px;">12k <br> </h1>
+                            <p><span class="over-view-text">online</span> </p>
+                        </div>
                     </div>
                 </div>
-                <div
-                    class="col-lg-3 col-md-6 col-sm-12 bg-light d-flex align-items-center justify-content-center rounded-3 shadow-lg">
-                    <i class="fas fa-id-card-alt over-view-icon"></i>
-                    <div class="ps-3">
-                        <h1 style="margin-bottom: 0px;">50+ <br> </h1>
-                        <p><span class="over-view-text">Expert Tutors</span> </p>
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="bg-light d-flex align-items-center justify-content-center rounded-3 shadow-lg">
+                        <i class="fas fa-id-card-alt over-view-icon"></i>
+                        <div class="ps-3">
+                            <h1 style="margin-bottom: 0px;">50+ <br> </h1>
+                            <p><span class="over-view-text">Expert Tutors</span> </p>
+                        </div>
                     </div>
                 </div>
-                <div
-                    class="col-lg-3 col-md-6 col-sm-12 bg-info d-flex align-items-center justify-content-center rounded-3 shadow-lg">
-                    <i class="fas fa-user-graduate over-view-icon"></i>
-                    <div class="ps-3">
-                        <h1 style="margin-bottom: 0px;">50K+ <br> </h1>
-                        <p><span class="over-view-text">online Students</span> </p>
+                <div class="col-lg-3 col-md-6 col-sm-12 ">
+                    <div class="bg-info d-flex align-items-center justify-content-center rounded-3 shadow-lg">
+                        <i class="fas fa-user-graduate over-view-icon"></i>
+                        <div class="ps-3">
+                            <h1 style="margin-bottom: 0px;">50K+ <br> </h1>
+                            <p><span class="over-view-text">online Students</span> </p>
+                        </div>
                     </div>
                 </div>
-                <div
-                    class="col-lg-3 col-md-6 col-sm-12 bg-success d-flex align-items-center justify-content-center rounded-3 shadow-lg">
-                    <i class="far fa-address-card over-view-icon"></i>
-                    <div class="ps-3">
-                        <h1 style="margin-bottom: 0px;">3k+ <br> </h1>
-                        <p><span class="over-view-text">Certified Course</span> </p>
+                <div class="col-lg-3 col-md-6 col-sm-12 ">
+                    <div class="bg-success d-flex align-items-center justify-content-center rounded-3 shadow-lg">
+                        <i class="far fa-address-card over-view-icon"></i>
+                        <div class="ps-3">
+                            <h1 style="margin-bottom: 0px;">3k+ <br> </h1>
+                            <p><span class="over-view-text">Certified Course</span> </p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
-    <!-- problme ache eikhane  -->
-
-    <section class="container-fluid my-5">
-        <div class="container">
-            <div class="row g-2">
-                <div
-                    class="col-lg-3 col-md-6 col-sm-12 bg-warning d-flex align-items-center justify-content-center rounded-3 shadow-lg">
-                    <i class="fas fa-laptop over-view-icon"></i>
-                    <div class="ps-3">
-                        <h1 style="margin-bottom: 0px;">12k <br> </h1>
-                        <p><span class="over-view-text">online</span> </p>
-                    </div>
-                </div>
-
-                <div class="col-4">
-                    <div class="p-3 border bg-light">Custom column padding</div>
-                </div>
-                <div class="col-3">
-                    <div class="p-3 border bg-light">Custom column padding</div>
-                </div>
-                <div class="col-3">
-                    <div class="p-3 border bg-light">Custom column padding</div>
-                </div>
-                <div class="col-3">
-                    <div class="p-3 border bg-light">Custom column padding</div>
-                </div>
-                <div class="col-3">
-                    <div class="p-3 border bg-light">Custom column padding</div>
-                </div>
-                <div class="col-3">
-                    <div class="p-3 border bg-light">Custom column padding</div>
-                </div>
-            </div>
-        </div>
-    </section>
-
+    
 
 
     <!-- main section -->
@@ -764,7 +733,8 @@
                                             <p class="fw-bold mt-3">Carolyn Ortiz</p>
                                         </div>
                                         <!-- down div %% all rating part -->
-                                        <div class="text-center w-50 float-end bg-danger p-3 border shadow-lg rounded-3">
+                                        <div
+                                            class="text-center w-50 float-end bg-danger p-3 border shadow-lg rounded-3">
                                             <h3>4.5/5.0</h3>
                                             <div>
                                                 <i class="fas fa-star star-filled"></i>
@@ -786,21 +756,24 @@
                                             <h2>100+ Verified Mentore</h2>
                                             <!-- mentor one -->
                                             <div class="d-flex align-items-center ">
-                                                <img src="./Image/profile-photo/02.jpg" width="50px" height="50px" alt="">
+                                                <img src="./Image/profile-photo/02.jpg" width="50px" height="50px"
+                                                    alt="">
                                                 <div class="ms-2">
                                                     <h5>Lori Stevens <br> <small> Tutor of physic </small> </h5>
                                                 </div>
                                             </div>
-                                             <!-- mentor two -->
+                                            <!-- mentor two -->
                                             <div class="d-flex align-items-center ">
-                                                <img src="./Image/profile-photo/04.jpg" width="50px" height="50px" alt="">
+                                                <img src="./Image/profile-photo/04.jpg" width="50px" height="50px"
+                                                    alt="">
                                                 <div class="ms-2">
                                                     <h5>Lori Stevens <br> <small> Tutor of physic </small> </h5>
                                                 </div>
                                             </div>
-                                             <!-- mentor three -->
+                                            <!-- mentor three -->
                                             <div class="d-flex align-items-center ">
-                                                <img src="./Image/profile-photo/03.jpg" width="50px" height="50px" alt="">
+                                                <img src="./Image/profile-photo/03.jpg" width="50px" height="50px"
+                                                    alt="">
                                                 <div class="ms-2">
                                                     <h5>Lori Stevens <br> <small> Tutor of physic </small> </h5>
                                                 </div>
@@ -811,7 +784,8 @@
                                         <div class="text-center p-3 border shadow-lg rounded-3 mt-5 mb-4">
                                             <img class="rounded-circle" src="./Image/profile-photo/03.jpg" width="100"
                                                 height="100" alt="">
-                                            <p>At wedding believed laughing althrough the Moonlight newspaper uo its enjoyment agreeble depending. </p>
+                                            <p>At wedding believed laughing althrough the Moonlight newspaper uo its
+                                                enjoyment agreeble depending. </p>
                                             <div>
                                                 <i class="fas fa-star star-filled"></i>
                                                 <i class="fas fa-star star-filled"></i>
@@ -841,6 +815,26 @@
             </div>
         </div>
     </section>
+
+
+
+
+    <!--------------------------------------------->
+    <!-- footer section -->
+    <!--------------------------------------------->
+
+    <footer class="container-fluid bg-dark text-light text-center">copyrigth @ by zaman </footer>
+
+
+
+
+
+
+
+
+
+
+
 
 
 
