trending course more added

--- a/main.html
+++ b/main.html
@@ -196,8 +196,7 @@
     <section class="container-fluid my-5">
         <div class="container">
             <div class="row g-2 d-flex justify-content-center">
-                <div
-                    class="col-xl-3 col-lg-4 col-md-6 col-sm-12 ">
+                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 ">
                     <div class="bg-warning d-flex align-items-center justify-content-center rounded-3 shadow-lg">
                         <i class="fas fa-laptop over-view-icon"></i>
                         <div class="ps-3">
@@ -236,7 +235,7 @@
             </div>
         </div>
     </section>
-    
+
 
 
     <!-- main section -->
@@ -254,7 +253,7 @@
         <!-- course nav system is added -->
 
         <!-- eita problem ache  -->
-        <div class=" container text-center bg-danger py-2">
+        <div style="height: 100px;" class=" container d-flex justify-content-center align-items-center bg-danger py-2">
             <nav aria-label="Page navigation example ">
                 <ul class="pagination justify-content-center">
                     <li class="page-item"><a class="page-link" href="#">Data science</a></li>
@@ -649,6 +648,144 @@
         <!-- trend course card develop -->
         <div class="container">
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card shadow-lg">
+                        <img src="./Image/trending-course/17.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <!-- card highlight -->
+                            <div class="d-flex align-items-center justify-content-lg-between">
+                                <div class="d-flex card-title ">
+                                    <p class="bg-danger rounded-3 px-2 mx-1 fw-bold text-light">Pro level</p>
+                                    <p class="bg-warning rounded-3 px-2 mx-1 fw-bold text-light">Advance</p>
+                                </div>
+                                <i class="far fa-bookmark heart-filled"></i>
+                            </div>
+                            <h5 class="card-title">The Compelate Digital Marketinf Course</h5>
+                            <p class="card-text">8 in One course.</p>
+                        </div>
+                        <div class="card-body">
+                            <i class="fas fa-star star-filled"></i>
+                            <i class="fas fa-star star-filled"></i>
+                            <i class="fas fa-star star-filled"></i>
+                            <i class="fas fa-star star-filled"></i>
+                            <i class="fas fa-star"></i>
+                            4.0/5.0
+                        </div>
+                        <div class="d-flex align-items-center justify-content-start ">
+                            <div class="d-flex align-items-center mx-2">
+                                <i class="far fa-clock time-filled"></i>
+                                <small class="text-muted ms-2">3h 40min</small>
+                            </div>
+                            <div class="d-flex align-items-center mx-2">
+                                <i class="far fa-list-alt time-filled"></i>
+                                <small class="text-muted ms-2">15 lectures</small>
+                            </div>
+                        </div>
+                        <!-- card footer part -->
+                        <div class="card-footer mt-4 d-flex align-items-center justify-content-between">
+                            <div class="d-flex align-items-center mx-2">
+                                <img src="./Image/profile-photo/04.jpg" width="40px" height="40px" alt="">
+                                <small class="text-muted ms-2">Jhon Smait</small>
+                            </div>
+                            <div class="d-flex align-items-center mx-2">
+                                <i class="fas fa-dollar-sign heart-filled"></i>
+                                <h3 class="text-success">250</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow-lg">
+                        <img src="./Image/trending-course/16.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <!-- card highlight -->
+                            <div class="d-flex align-items-center justify-content-lg-between">
+                                <div class="d-flex card-title ">
+                                    <p class="bg-danger rounded-3 px-2 mx-1 fw-bold text-light">Pro level</p>
+                                    <p class="bg-warning rounded-3 px-2 mx-1 fw-bold text-light">Advance</p>
+                                </div>
+                                <i class="far fa-bookmark heart-filled"></i>
+                            </div>
+                            <h5 class="card-title">The Compelate Digital Marketinf Course</h5>
+                            <p class="card-text">8 in One course.</p>
+                        </div>
+                        <div class="card-body">
+                            <i class="fas fa-star star-filled"></i>
+                            <i class="fas fa-star star-filled"></i>
+                            <i class="fas fa-star star-filled"></i>
+                            <i class="fas fa-star star-filled"></i>
+                            <i class="fas fa-star"></i>
+                            4.0/5.0
+                        </div>
+                        <div class="d-flex align-items-center justify-content-start ">
+                            <div class="d-flex align-items-center mx-2">
+                                <i class="far fa-clock time-filled"></i>
+                                <small class="text-muted ms-2">3h 40min</small>
+                            </div>
+                            <div class="d-flex align-items-center mx-2">
+                                <i class="far fa-list-alt time-filled"></i>
+                                <small class="text-muted ms-2">15 lectures</small>
+                            </div>
+                        </div>
+                        <!-- card footer part -->
+                        <div class="card-footer mt-4 d-flex align-items-center justify-content-between">
+                            <div class="d-flex align-items-center mx-2">
+                                <img src="./Image/profile-photo/04.jpg" width="40px" height="40px" alt="">
+                                <small class="text-muted ms-2">Jhon Smait</small>
+                            </div>
+                            <div class="d-flex align-items-center mx-2">
+                                <i class="fas fa-dollar-sign heart-filled"></i>
+                                <h3 class="text-success">250</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow-lg">
+                        <img src="./Image/trending-course/15.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <!-- card highlight -->
+                            <div class="d-flex align-items-center justify-content-lg-between">
+                                <div class="d-flex card-title ">
+                                    <p class="bg-danger rounded-3 px-2 mx-1 fw-bold text-light">Pro level</p>
+                                    <p class="bg-warning rounded-3 px-2 mx-1 fw-bold text-light">Advance</p>
+                                </div>
+                                <i class="far fa-bookmark heart-filled"></i>
+                            </div>
+                            <h5 class="card-title">The Compelate Digital Marketinf Course</h5>
+                            <p class="card-text">8 in One course.</p>
+                        </div>
+                        <div class="card-body">
+                            <i class="fas fa-star star-filled"></i>
+                            <i class="fas fa-star star-filled"></i>
+                            <i class="fas fa-star star-filled"></i>
+                            <i class="fas fa-star star-filled"></i>
+                            <i class="fas fa-star"></i>
+                            4.0/5.0
+                        </div>
+                        <div class="d-flex align-items-center justify-content-start ">
+                            <div class="d-flex align-items-center mx-2">
+                                <i class="far fa-clock time-filled"></i>
+                                <small class="text-muted ms-2">3h 40min</small>
+                            </div>
+                            <div class="d-flex align-items-center mx-2">
+                                <i class="far fa-list-alt time-filled"></i>
+                                <small class="text-muted ms-2">15 lectures</small>
+                            </div>
+                        </div>
+                        <!-- card footer part -->
+                        <div class="card-footer mt-4 d-flex align-items-center justify-content-between">
+                            <div class="d-flex align-items-center mx-2">
+                                <img src="./Image/profile-photo/04.jpg" width="40px" height="40px" alt="">
+                                <small class="text-muted ms-2">Jhon Smait</small>
+                            </div>
+                            <div class="d-flex align-items-center mx-2">
+                                <i class="fas fa-dollar-sign heart-filled"></i>
+                                <h3 class="text-success">250</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="col">
                     <div class="card shadow-lg">
                         <img src="./Image/trending-course/14.jpg" class="card-img-top" alt="...">
