--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>link</title>
+    <title>LivEdu</title>
     <link rel="stylesheet" href="./bootstraps/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -197,7 +197,7 @@
         <div class="container">
             <div class="row g-2 d-flex justify-content-center">
                 <div
-                    class="col-lg-3 col-md-6 col-sm-12 ">
+                    class="col-xl-3 col-lg-4 col-md-6 col-sm-12 ">
                     <div class="bg-warning d-flex align-items-center justify-content-center rounded-3 shadow-lg">
                         <i class="fas fa-laptop over-view-icon"></i>
                         <div class="ps-3">
@@ -206,7 +206,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-12">
+                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
                     <div class="bg-light d-flex align-items-center justify-content-center rounded-3 shadow-lg">
                         <i class="fas fa-id-card-alt over-view-icon"></i>
                         <div class="ps-3">
@@ -215,7 +215,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-12 ">
+                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 ">
                     <div class="bg-info d-flex align-items-center justify-content-center rounded-3 shadow-lg">
                         <i class="fas fa-user-graduate over-view-icon"></i>
                         <div class="ps-3">
@@ -224,7 +224,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-12 ">
+                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 ">
                     <div class="bg-success d-flex align-items-center justify-content-center rounded-3 shadow-lg">
                         <i class="far fa-address-card over-view-icon"></i>
                         <div class="ps-3">
@@ -269,7 +269,7 @@
         <!-- course details section -->
 
         <div class="container mt-5">
-            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-xl-4 row-cols-lg-3 g-4">
                 <div class="col">
                     <div class="card shadow-lg">
                         <img src="./Image/course-photo/05.jpg" class="card-img-top" alt="...">
