feedback ground image added

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <div class="container-fluid header-bannar-section">
             <div class="row align-items-center">
                 <div class="col-lg-6 ps-5 my-3">
-                    <h1>Limitless learning at your <span class="bannar-title-word"> fingertips </span></h1>
+                    <h1 class="fw-bolder">Limitless learning at your <span class="bannar-title-word"> fingertips </span></h1>
                     <p>Online learning and teaching marketplace with 5K+ courses & 10M students. Taught by experts to
                         help you acquire new skills.</p>
 
@@ -845,11 +845,11 @@
 
         <div class="container">
             <!-- feeds back section -->
-            <div class="row g-2 align-items-center d-flex ">
+            <div class="row g-2 align-items-center d-flex feedback-bg">
                 <!-- student and teachers reviews and right section-->
                 <!-- using order for responsive review -->
                 <div class="col-xl-7 col-md-6 col-sm-12 order-lg-1 order-md-2 order-sm-2 order-2">
-                    <div class="p-3 border bg-light">
+                    <div class="p-3 border bg-light rounded-3 feedback-left-bg">
                         <div class="row">
                             <div class="row g-4">
                                 <!-- left review -->
@@ -942,7 +942,7 @@
                 </div>
                 <!-- text part in this section and right section-->
                 <div class="col-xl-5 col-md-6 col-sm-12 order-lg-2 order-md-1 order-sm-1 order-1">
-                    <div class="p-3 border bg-light">
+                    <div class="p-3 border bg-light rounded-3 feedback-right-bg">
                         <h1 class="fw-bold">Some valuable feedback from our students</h1>
                         <p>Supposing so be resolving breakfast am or perfectly. It drew a hill from me. Valley by oh
                             twenty direct me so. Departure defective arranging rapturous did believe him all had
