short overview text color change

--- a/index.html
+++ b/index.html
@@ -199,35 +199,35 @@
             <div class="row g-2 d-flex justify-content-center">
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 ">
                     <div class="bg-warning d-flex align-items-center justify-content-center rounded-3 shadow-lg">
-                        <i class="fas fa-laptop over-view-icon"></i>
-                        <div class="ps-3">
+                        <i class="fas fa-laptop over-view-icon text-success"></i>
+                        <div class="ps-3 text-success">
                             <h1 style="margin-bottom: 0px;">12k <br> </h1>
                             <p><span class="over-view-text">online</span> </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
-                    <div class="bg-light d-flex align-items-center justify-content-center rounded-3 shadow-lg">
-                        <i class="fas fa-id-card-alt over-view-icon"></i>
-                        <div class="ps-3">
-                            <h1 style="margin-bottom: 0px;">50+ <br> </h1>
-                            <p><span class="over-view-text">Expert Tutors</span> </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 ">
-                    <div class="bg-info d-flex align-items-center justify-content-center rounded-3 shadow-lg">
-                        <i class="fas fa-user-graduate over-view-icon"></i>
-                        <div class="ps-3">
+                    <div class="bg-primary d-flex align-items-center justify-content-center rounded-3 shadow-lg">
+                        <i class="fas fa-user-graduate over-view-icon text-light"></i>
+                        <div class="ps-3 text-light">
                             <h1 style="margin-bottom: 0px;">50K+ <br> </h1>
                             <p><span class="over-view-text">online Students</span> </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 ">
+                    <div class="bg-light d-flex align-items-center justify-content-center rounded-3 shadow-lg">
+                        <i class="fas fa-id-card-alt over-view-icon text-danger"></i>
+                        <div class="ps-3 text-danger">
+                            <h1 style="margin-bottom: 0px;">50+ <br> </h1>
+                            <p><span class="over-view-text">Expert Tutors</span> </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 ">
                     <div class="bg-success d-flex align-items-center justify-content-center rounded-3 shadow-lg">
-                        <i class="far fa-address-card over-view-icon"></i>
-                        <div class="ps-3">
+                        <i class="far fa-address-card over-view-icon text-white"></i>
+                        <div class="ps-3 text-white">
                             <h1 style="margin-bottom: 0px;">3k+ <br> </h1>
                             <p><span class="over-view-text">Certified Course</span> </p>
                         </div>
@@ -250,6 +250,8 @@
             <p>choose frm hundreds of cours from specialist organizations</p>
             <div></div>
         </div>
+
+
 
         <!-- course nav system is added -->
 
